--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -40,7 +40,10 @@
     "photo": {
         "recentPhotos": "Recent Photos",
         "uploadPhoto": "Upload Photo",
-        "noPhoto": "No photo."
+        "noPhoto": "No photo.",
+        "takePhoto": "Take Photo",
+        "takenPhotos": "Taken Photos",
+        "unit": "photos"
     },
     "app": {
         "enable": "Enable",
@@ -98,7 +101,86 @@
         "monthsAgo": "{months} months ago",
         "yearsAgo": "{years} years ago",
         "noDate": "No Date",
-        "share": "Share"
+        "share": "Share",
+        "skip": "Skip",
+        "previous": "Previous",
+        "next": "Next",
+        "start": "Start",
+        "storageUsage": "Storage Usage",
+        "quickAction": "Quick Action",
+        "gallery": "Gallery",
+        "camera": "Camera",
+        "album": "Album",
+        "record": "Record",
+        "title": "Title",
+        "content": "Content",
+        "tag": "Tag",
+        "inviteCode": "Invite Code",
+        "close": "Close",
+        "groupLeader": "Group Leader",
+        "member": "Member"
+    },
+    "validation" : {
+        "titleOrContentRequired": "Please enter the title or content.",
+        "editSuccess": "Successfully edited.",
+        "deleteSuccess": "Successfully deleted.",
+        "createSuccess": "Successfully created.",
+        "saveSuccess": "Successfully saved."
+    },
+    "date": {
+        "year": "Year",
+        "month": "Month",
+        "day": "Day",
+        "yearFormat": "{year} year",
+        "monthFormat": "{month} month",
+        "dayFormat": "{day} day",
+        "day1": "Monday",
+        "day2": "Tuesday",
+        "day3": "Wednesday",
+        "day4": "Thursday",
+        "day5": "Friday",
+        "day6": "Saturday",
+        "day7": "Sunday",
+        "weekDayFormat": "{day} day"
+    },
+    "family": {
+        "familyShare": "Family Share",
+        "familyShareDescription": "Please set up your family group first.",
+        "inviteCode": "Invite Code",
+        "inviteCodeDescription": "Share this code with your family members.",
+        "familyWithPreciousMoments": "Family with Precious Moments",
+        "familyGroupName": "Family Group Name",
+        "familyGroupNameHintText": "Enter family group name.",
+        "familyShareDescription2": "Please set up your family group first.",
+        "familyShareDescription3": "Family Group Description",
+        "familyShareDescription3HintText": "Enter family group description.",
+        "familyStartDescription": "How do you want to start?",
+        "familyCodeCreate": "Family Code Create",
+        "familyCodeCreateDescription": "The person uploading the photos\nCreate a family group and invite them.",
+        "familyCodeCreateDescription2": "There is an invitation code.",
+        "familyCodeCreateDescription3": "Do you want to enter the family group?\nEnter the invitation code.",
+        "familyCodeCreateDescription4": "Enter the invitation code.",
+        "familyCodeShare": "Family Code Share",
+        "familyMemberCountFormat": "Family Member {count} members",
+        "familyJoin": "Family Join",
+        "familyJoinCode": "Enter Invitation Code",
+        "familyJoinCodeDescription": "Enter the 6-digit invitation code shared by your family.",
+        "familyJoinCodeDescription2": "Join the family group with invitation code {code}.",
+        "familyJoinCodeDescription3": "Didn't receive the invitation code? Ask your family for the invitation code in the Baby Log app.",
+        "familyJoinCodeDescription4": "Inviting you to join the Baby Log family group!\n\nInvitation Code: {code}\n\nPlease enter the code in the Baby Log app to join the family group.",
+        "familyJoinCodeDescription5": "Inviting you to join the Baby Log family group!"
+    },
+    "baby": {
+        "onBoardingTitle": "Record your baby's precious moments",
+        "onBoardingDescription": "Capture special moments every day with photos.",
+        "aiDescription": "AI automatically finds meaningful moments",
+        "aiDescription2": "AI automatically analyzes emotions and first moments.",
+        "onBoardingAiDescription": "AI automatically finds meaningful moments",
+        "onBoardingAiDescription2": "AI automatically analyzes emotions and first moments.",
+        "shareDescription": "Share your precious memories with your family",
+        "shareDescription2": "Safely share photos with your family members.",
+        "babyLogDescription": "Write down your baby's special moments or growth records freely...\n\nExample:\n• Today I said 'Mom' for the first time!\n• I was so cute整理玩具 alone.\n• I slept well at night and woke up vigorously in the morning.",
+        "babyLogTagHintText": "Enter tag (e.g. first step, speaking, health)"
     },
     "error": {
         "unknownError": "An unknown error has occurred.",
