--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -40,7 +40,10 @@
     "photo": {
         "recentPhotos": "최근 사진",
         "uploadPhoto": "사진 업로드",
-        "noPhoto": "사진이 없습니다."
+        "noPhoto": "사진이 없습니다.",
+        "takePhoto": "사진 촬영",
+        "takenPhotos": "촬영한 사진",
+        "unit": "장"
     },
     "app": {
         "enable": "활성화",
@@ -98,7 +101,92 @@
         "hoursAgo": "{hours}시간 전",
         "daysAgo": "{days}일 전",
         "monthsAgo": "{months}개월 전",
-        "yearsAgo": "{years}년 전"
+        "yearsAgo": "{years}년 전",
+        "skip": "건너뛰기",
+        "previous": "이전",
+        "next": "다음",
+        "start": "시작하기",
+        "storageUsage": "저장소 사용량",
+        "quickAction": "빠른 액션",
+        "gallery": "갤러리",
+        "camera": "카메라",
+        "album": "앨범",
+        "record": "기록",
+        "title": "제목",
+        "content": "내용",
+        "tag": "태그",
+        "inviteCode": "초대 코드",
+        "close": "닫기",
+        "share": "공유",
+                "groupLeader": "그룹장",
+        "member": "맴버"
+    },
+    "validation" : {
+        "titleOrContentRequired": "제목 또는 내용을 입력해주세요.",
+        "editSuccess": "성공적으로 수정되었습니다.",
+        "deleteSuccess": "성공적으로 삭제되었습니다.",
+        "createSuccess": "성공적으로 생성되었습니다.",
+        "saveSuccess": "성공적으로 저장되었습니다."
+    },
+    "date": {
+        "year": "년",
+        "month": "월",
+        "day": "일",
+        "yearFormat": "{year}년",
+        "monthFormat": "{month}월",
+        "dayFormat": "{day}일",
+        "yearAndMonthFormat": "{year}년 {month}월",
+        "yearAndMonthAndDayFormat": "{year}년 {month}월 {day}일",
+        "day1": "월",
+        "day2": "화",
+        "day3": "수",
+        "day4": "목",
+        "day5": "금",
+        "day6": "토",
+        "day7": "일",
+        "weekDayFormat": "{day}요일"
+
+    },
+    "family": {
+        "familyShare": "가족 공유",
+        "familyShareDescription": "가족 그룹을 먼저 설정해주세요.",
+        "inviteCode": "초대 코드",
+        "inviteCodeDescription": "이 코드를 가족들에게 공유해주세요.",
+        "familyWithPreciousMoments": "가족과 함께하는\n소중한 순간들",
+        "familyGroupName": "가족 그룹 이름",
+        "familyGroupNameHintText": "가족 그룹 이름을 입력해주세요.",
+        "familyShareDescription2": "가족 그룹을 먼저 설정해주세요.",
+        "familyShareDescription3": "가족 그룹 설명",
+        "familyShareDescription3HintText": "가족 그룹 설명을 입력해주세요.",
+        "familyStartDescription": "어떤 방법으로 시작하시겠어요?",
+        "familyCodeCreate": "가족 코드 만들기",
+        "familyCodeCreateDescription": "사진을 올리는 사람이에요\n가족 그룹을 만들고 초대해주세요",
+        "familyCodeCreateDescription2": "초대 코드가 있어요",
+        "familyCodeCreateDescription3": "가족 그룹에 입장할래요\n초대 코드를 입력해주세요",
+        "familyCodeCreateDescription4": "초대 코드를 입력해주세요",
+        "familyCodeShare": "초대 코드 공유하기",
+        "familyMemberCountFormat": "가족 맴버 {count}명",
+        "familyJoin": "가족 그룹 참여",
+        "familyJoinCode": "초대 코드 입력",
+        "familyJoinCodeDescription": "가족이 공유한 6자리 초대 코드를\n입력해주세요",
+        "familyJoinCodeDescription2": "초대 코드 {code}로 가족 그룹에 참여합니다.",
+        "familyJoinCodeDescription3":"초대 코드를 받지 못했나요? 가족에게 Baby Log 앱에서 초대 코드를 요청해보세요.",
+        "familyJoinCodeDescription4":"Baby Log 가족 그룹에 초대합니다!\n\n초대 코드: ${code}\n\nBaby Log 앱에서 위 코드를 입력하여 가족 그룹에 참여하세요.",
+        "familyJoinCodeDescription5":"Baby Log 가족 그룹에 초대"
+
+    },
+    "baby": {
+        "onBoardingTitle": "아기의 소중한 순간을 기록하세요",
+        "onBoardingDescription": "매일매일의 특별한 순간들을 사진으로 남겨보세요.",
+        "aiDescription": "AI가 자동으로 의미있는 순간을 찾아드려요",
+        "aiDescription2": "인공지능이 감정과 첫 순간들을 자동으로 분석합니다.",
+        "onBoardingAiDescription": "AI가 자동으로 의미있는 순간을 찾아드려요",
+        "onBoardingAiDescription2": "인공지능이 감정과 첫 순간들을 자동으로 분석합니다.",
+        "shareDescription": "가족과 함께 소중한 추억을 공유하세요",
+        "shareDescription2": "안전하게 가족 구성원들과 사진을 공유할 수 있습니다.", 
+        "babyLogDescription":"아이의 특별한 순간이나 성장 기록을 자유롭게 적어보세요...\n\n예시:\n• 오늘 처음으로 '엄마'라고 말했어요!\n• 혼자서 장난감을 정리하는 모습이 너무 귀여웠어요\n• 밤에 잘 잤고, 아침에 활발하게 일어났어요",
+        "babyLogTagHintText": "태그 입력 (예: 첫걸음, 말하기, 건강)"
+
     },
     "error": {
         "unknownError": "알 수 없는 오류가 발생했습니다.",
