--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -125,7 +125,34 @@
         "loadingMessage": "잠시만 기다려주세요...",
         "reply": "댓글",
         "delete": "삭제",
-        "report": "신고"
+        "report": "신고",
+        "정보" : "정보"
+    },
+    "file": {
+        "fileInfo": "파일 정보",
+        "fileSize": "파일 크기",
+        "fileType": "파일 타입",
+        "fileName": "파일 이름",
+        "fileUrl": "파일 URL",
+        "fileActive": "파일 활성 여부",
+        "fileTags": "파일 태그",
+        "fileLikes": "파일 좋아요",
+        "fileReplies": "파일 댓글",
+        "fileCreatedAt": "파일 생성일",
+        "fileUpdatedAt": "파일 수정일",
+        "fileDeletedAt": "파일 삭제일",
+        "fileDeleted": "파일 삭제",
+        "fileDeletedDescription": "파일을 삭제하시겠습니까?",
+        "fileDeletedConfirmation": "파일을 삭제하시겠습니까?",
+        "fileDeletedSuccess": "파일을 성공적으로 삭제하였습니다.",
+        "fileDeletedError": "파일 삭제 중 오류가 발생했습니다.",
+        "fileDeletedCancel": "파일 삭제 취소",
+        "fileDeletedCancelConfirmation": "파일 삭제를 취소하시겠습니까?",
+        "fileDeletedCancelSuccess": "파일 삭제를 성공적으로 취소하였습니다.",
+        "fileDeletedCancelError": "파일 삭제 취소 중 오류가 발생했습니다.",
+        "technicalInfo": "기술적 정보",
+        "userId": "파일 소유자 ID",
+        "fileNameByUser": "파일 소유자 명"
     },
     "validation" : {
         "titleOrContentRequired": "제목 또는 내용을 입력해주세요.",
