--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -144,7 +144,8 @@
         "save": "저장",
         "photo": "사진",
         "video": "비디오",
-        "duration": "재생 시간"
+        "duration": "재생 시간",
+        "log": "기록"
 
     },
     "file": {
@@ -237,11 +238,13 @@
         "shareDescription": "가족과 함께 소중한 추억을 공유하세요",
         "shareDescription2": "안전하게 가족 구성원들과 사진을 공유할 수 있습니다.", 
         "babyLogDescription":"아이의 특별한 순간이나 성장 기록을 자유롭게 적어보세요...\n\n예시:\n• 오늘 처음으로 '엄마'라고 말했어요!\n• 혼자서 장난감을 정리하는 모습이 너무 귀여웠어요\n• 밤에 잘 잤고, 아침에 활발하게 일어났어요",
+        "babyLogDescription2": "첫 걸음마, 첫 말하기, 특별한 하루...\n모든 순간이 소중한 기록이 됩니다.",
         "babyLogTagHintText": "태그 입력 (예: 첫걸음, 말하기, 건강)",
         "cameraHintText": "카메라로 직접 촬영하거나 갤러리에서 선택하세요",
         "cameraTitle": "카메라로 촬영",
         "galleryTitle": "갤러리에서 선택",
-        "reTake": "다시 촬영"
+        "reTake": "다시 촬영",
+        "writeDiary": "일기 작성"
 
     },
     "error": {
@@ -273,7 +276,9 @@
         "deleteUserDataDescription": "정말로 모든 사용자 데이터를 삭제하시겠습니까?",
         "deleteDataWarning": "이 작업은 되돌릴 수 없습니다. 영구적으로 삭제됩니다.",
         "deleteDataTitle": "{name} 삭제",
-        "deleteDataDescription": "정말로 삭제하시겠습니까?"
+        "deleteDataDescription": "정말로 삭제하시겠습니까?",
+        "noData": "데이터가 없습니다.",
+        "lastData": "마지막 데이터 입니다."
     },
     "chat": {
         "clearChat": "채팅 지우기",
