--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -150,7 +150,9 @@
         "video": "Video",
         "duration": "Duration",
         "log": "Log",
-        "writeDiary": "Write Diary"
+        "writeDiary": "Write Diary",
+        "noSearchResult": "No search results.",
+        "inputSearchKeyword": "Enter a search keyword."
 
     },
     "validation" : {
